# nslnotes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite-plugin-api.ts  vite.config.ts
.claude/plans/: bright-floating-pizza.md
.github/workflows/: build.yml
demo/demo-data/: topics.yaml
docs/: PRD.md  TASKS.md  UI-INTERACTIONS.md  UI-TEST-CHECKLIST.md
docs/001-initial/: DESIGN.md  REQUIREMENTS.md  TASKS.md
docs/002-images-and-search/: DESIGN.md  SPEC.md  TASKS.md
docs/003-month-navigation/: SPEC.md
docs/004-cargo-workspace/: DESIGN.md  SPEC.md  TASKS.md
scripts/: convert-logseq.ts  detect-install-web.js  detect-install.js  install-web.ps1  install-web.sh  install.ps1  install.sh
src/: App.css  App.tsx  editor.css  hljs-theme.css  index.tsx
src-lib/: Cargo.toml
src-lib/src/: fs_ops.rs  lib.rs  settings.rs  watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
src-web/: Cargo.toml
src-web/src/: main.rs  routes.rs  sse.rs
src/components/: ErrorBoundary.tsx  FolderPathDialog.tsx  LoadingSkeleton.tsx  QuickCapture.tsx  SetupScreen.tsx  SplashScreen.tsx  Toast.tsx  index.ts
src/lib/: dates.test.ts  dates.ts  drag.ts  entityParser.test.ts  entityParser.ts  frontmatter.test.ts  frontmatter.ts  index.ts  indexCache.test.ts  indexCache.ts  markdown.test.ts  markdown.ts  relevance.test.ts  relevance.ts  runtime.ts  slug.test.ts  slug.ts  workerPool.ts
(+139 files in other folders)
