[package]
name = "nslnotes-tauri"
version = "0.1.0"
description = "Local-first, plain-text knowledge tool"
authors = ["nsl"]
edition = "2021"

[lib]
name = "nslnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nslnotes-core = { path = "../src-lib" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
