[package]
name = "nslnotes-web"
version = "0.1.0"
edition = "2021"

[dependencies]
nslnotes-core = { path = "../src-lib" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["axum"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
mime_guess = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
